add logo to sidebar

--- a/index.html
+++ b/index.html
@@ -56,25 +56,31 @@
         <a class="icon-link" id="show-nav-columnar-menu"><i class="fa fa-bars fa-xl"></i></a>
       </div>
      <div id="nav-columnar-menu-background">
-      <ul id="nav-columnar-menu">
-        <li class="nav-element">
-          <i class="fa fa-house fa-xl"></i>
-          <a class="nav-link compressed" href="#"><h1 class="nav-link-label">Home</h1></a>
-        </li>
-        <li class="nav-element">
-          <i class="fa fa-user fa-xl"></i>
-          <a class="nav-link compressed" href="#aboutMe"><h1 class="nav-link-label">About me</h1></a>
-        </li>
-        <li class="nav-element">
-          <i class="fa fa-tasks fa-xl"></i>
-          <a class="nav-link compressed" href="#work"><h1 class="nav-link-label">Work</h1></a>
-        </li>
-        <li class="nav-element">
-          <i class="fa fa-phone fa-xl"></i>
-          <a class="nav-link compressed" href="#contact"><h1 class="nav-link-label">Contact</h1></a>
-        </li>
-
-      </ul>
+      <div id="nav-columnar-menu">
+        <div class="image-container">
+          <img src="./images/logo.png" width="150rem">
+        </div>
+        <ul id="nav-columnar-menu-list">
+          <li class="nav-element">
+            <i class="fa fa-house fa-xl"></i>
+            <a class="nav-link compressed" href="#"><h1 class="nav-link-label">Home</h1></a>
+          </li>
+          <li class="nav-element">
+            <i class="fa fa-user fa-xl"></i>
+            <a class="nav-link compressed" href="#aboutMe"><h1 class="nav-link-label">About me</h1></a>
+          </li>
+          <li class="nav-element">
+            <i class="fa fa-tasks fa-xl"></i>
+            <a class="nav-link compressed" href="#work"><h1 class="nav-link-label">Work</h1></a>
+          </li>
+          <li class="nav-element">
+            <i class="fa fa-phone fa-xl"></i>
+            <a class="nav-link compressed" href="#contact"><h1 class="nav-link-label">Contact</h1></a>
+          </li>
+  
+        </ul>
+      </div>
+ 
      </div>
     </nav>
   </header>
