create rotation animtion with the logo

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
      <div id="nav-columnar-menu-background">
       <div id="nav-columnar-menu">
         <div class="image-container">
-          <img src="./images/logo.png" width="150rem">
+          <img class="logo" src="./images/logo.png" width="150rem" height="150rem">
         </div>
         <ul id="nav-columnar-menu-list">
           <li class="nav-element">
