using h1 per page

--- a/index.html
+++ b/index.html
@@ -58,26 +58,25 @@
      <div id="nav-columnar-menu-background">
       <div id="nav-columnar-menu">
         <div class="image-container">
-          <img class="logo" src="./images/logo.png" width="150rem" height="150rem">
+          <img class="logo" src="./images/logo.png" width="150rem" height="150rem" alt="logo">
         </div>
         <ul id="nav-columnar-menu-list">
           <li class="nav-element">
             <i class="fa fa-house fa-xl"></i>
-            <a class="nav-link compressed" href="#"><h1 class="nav-link-label">Home</h1></a>
+            <a class="nav-link compressed" href="#"><h2 class="nav-link-label">Home</h2></a>
           </li>
           <li class="nav-element">
             <i class="fa fa-user fa-xl"></i>
-            <a class="nav-link compressed" href="#aboutMe"><h1 class="nav-link-label">About me</h1></a>
+            <a class="nav-link compressed" href="#aboutMe"><h2 class="nav-link-label">About me</h2></a>
           </li>
           <li class="nav-element">
             <i class="fa fa-tasks fa-xl"></i>
-            <a class="nav-link compressed" href="#work"><h1 class="nav-link-label">Work</h1></a>
+            <a class="nav-link compressed" href="#work"><h2 class="nav-link-label">Work</h2></a>
           </li>
           <li class="nav-element">
             <i class="fa fa-phone fa-xl"></i>
-            <a class="nav-link compressed" href="#contact"><h1 class="nav-link-label">Contact</h1></a>
+            <a class="nav-link compressed" href="#contact"><h2 class="nav-link-label">Contact</h2></a>
           </li>
-  
         </ul>
       </div>
  
@@ -98,9 +97,9 @@
   </section>
   <section>
     <article id="aboutMe" class="centered-article">
-      <h2 class="subtitle reveal">
+      <h1 class="subtitle reveal">
         About me
-      </h2>
+      </h1>
       <p class="reveal">
         Hello, My name is Carlos Jorge. I'm a full-stack engineer that enjoy coding on and off the work.
         I started working as a backend developer in 2020 using .net technologies and sql server.
@@ -115,7 +114,7 @@
   </section>
   <section>
     <article id="work">
-      <h2 class="subtitle reveal">Some projects I've make</h2>
+      <h1 class="subtitle reveal">Some projects I've make</h1>
       <div class="card-projects">
         <div id="open-ecommerce" class="card-project reveal">
           <div class="card-title">
