delete final slash in some tags

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
   <meta property="twitter:title" content="CarlosJorgeR's github repositories">
   <link rel="icon" type="image/x-icon" href="images/github.ico">
   <title>My github repositories</title>
-  <link rel="stylesheet" type="text/css" href="./css/styles.css" />
-  <link rel="stylesheet" type="text/css" href="./css/navbar.css" />
-  <link rel="stylesheet" type="text/css" href="./css/presentation-section.css" />
-  <link rel="stylesheet" type="text/css" href="./css/project-section.css" />
-  <link rel="stylesheet" type="text/css" href="./css/footer.css" />
+  <link rel="stylesheet" type="text/css" href="./css/styles.css">
+  <link rel="stylesheet" type="text/css" href="./css/navbar.css">
+  <link rel="stylesheet" type="text/css" href="./css/presentation-section.css">
+  <link rel="stylesheet" type="text/css" href="./css/project-section.css">
+  <link rel="stylesheet" type="text/css" href="./css/footer.css">
 
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    crossorigin="anonymous" referrerpolicy="no-referrer">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
