--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:description"
     content="CarlosJorgeR's github repositories, custom portfolio. The main goals of these projects is having fun and learn new technologies and good practices">
   <meta property="og:site_name" content="My repositories">
-  <meta property="og:image" itemprop="image" content="https://carlosjorger.github.io/my-repositories/images/logo.png">
+  <meta property="og:image" content="https://carlosjorger.github.io/my-repositories/images/logo.png">
   <meta property="twitter:description"
     content="CarlosJorgeR's github repositories, custom portfolio. The main goals of these projects is having fun and learn new technologies and good practices">
   <meta property="twitter:title" content="CarlosJorgeR's github repositories">
