--- a/index.html
+++ b/index.html
@@ -89,7 +89,13 @@
         <div id="nav-columnar-menu-background">
           <div id="nav-columnar-menu">
             <div class="image-container">
-              <img class="logo" src="./images/logo.png" alt="logo" />
+              <img
+                class="logo"
+                src="./images/logo.png"
+                alt="logo"
+                width="150rem"
+                height="150rem"
+              />
             </div>
             <ul id="nav-columnar-menu-list">
               <li class="nav-element">
@@ -139,7 +145,7 @@
       </section>
       <section>
         <article id="aboutMe" class="centered-article">
-          <h1 class="subtitle reveal">About me</h1>
+          <h2 class="subtitle reveal">About me</h2>
           <p class="reveal">
             Hello, My name is Carlos Jorge. I'm a full-stack engineer that enjoy
             coding on and off the work. I started working as a backend developer
@@ -157,7 +163,7 @@
       </section>
       <section>
         <article id="work">
-          <h1 class="subtitle reveal">Some projects I've make</h1>
+          <h2 class="subtitle reveal">Some projects I've make</h2>
           <div class="card-projects">
             <div id="open-ecommerce" class="card-project reveal">
               <div class="card-title">OpenEcommerce</div>
@@ -198,7 +204,7 @@
       <footer>
         <div class="footer">
           <div id="contact" class="contacts reveal">
-            <h1 class="subtitle contacts-item">Contact</h1>
+            <h2 class="subtitle contacts-item">Contact</h2>
             <div class="contacts-item">
               <a class="icon-link" href="mailto:rodriguezcuelloc@gmail.com"
                 ><i class="fab fa-google fa-3x"></i
