remove units of width and height properties of img

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                 class="logo"
                 src="./images/logo.png"
                 alt="logo"
-                width="150rem"
-                height="150rem"
+                width="150"
+                height="150"
               />
             </div>
             <ul id="nav-columnar-menu-list">
