improve SEO vocabulary

--- a/index.html
+++ b/index.html
@@ -130,16 +130,18 @@
     <main>
       <section>
         <div class="presentation centered-article">
-          <h1 id="presentation-title">
-            Hi, I am <br class="br-show" />Carlos Jorge!
+          <h1 class="presentation-title">
+            Hi, I am <br class="br-show" />Carlos Jorge, <br />
+            Web developer!
           </h1>
-          <h3 id="presentation-main-skill">
-            I'm an <br class="br-show" />full-stack engineer
-          </h3>
+          <h2 class="presentation-main-skill">
+            Welcome to my personal portfolio!
+          </h2>
           <p id="presentation-description">
             I'm a cuban computer science from Havana University. Currently, I'm
-            working as full-stack engineer focused in building .net application,
-            and frontend applications in frameworks like angular, vue or react.
+            working as full-stack engineer focused in building .net application
+            and their performance. Also, I work in frontend websites using
+            frameworks like angular, vue or react.
           </p>
         </div>
       </section>
