improve the metadata

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="CarlosJorgeR's github repositories, custom portfolio. The main goals of these projects is having fun and learn new technologies and good practices"
+      content="Carlos Jorge's personal portfolio. I show my most important github projects.The main goals of these projects is having fun and learn new technologies and good practices"
     />
     <meta
       name="keywords"
@@ -18,26 +18,26 @@
       content="https://carlosjorger.github.io/my-repositories/"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="CarlosJorgeR's github repositories" />
+    <meta property="og:title" content="Carlos Jorge's personal portfolio" />
     <meta
       property="og:description"
-      content="CarlosJorgeR's github repositories, custom portfolio. The main goals of these projects is having fun and learn new technologies and good practices"
+      content="Carlos Jorge's personal portfolio. I show my most important github projects.The main goals of these projects is having fun and learn new technologies and good practices"
     />
-    <meta property="og:site_name" content="My repositories" />
+    <meta property="og:site_name" content="Carlos Jorge's personal portfolio" />
     <meta
       property="og:image"
       content="https://carlosjorger.github.io/my-repositories/images/logo.png"
     />
     <meta
       property="twitter:description"
-      content="CarlosJorgeR's github repositories, custom portfolio. The main goals of these projects is having fun and learn new technologies and good practices"
+      content="Carlos Jorge's personal portfolio. I show my most important github projects.The main goals of these projects is having fun and learn new technologies and good practices"
     />
     <meta
       property="twitter:title"
-      content="CarlosJorgeR's github repositories"
+      content="Carlos Jorge's personal portfolio"
     />
     <link rel="icon" type="image/x-icon" href="images/github.ico" />
-    <title>My github repositories</title>
+    <title>Carlos Jorge's personal portfolio</title>
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
     <link rel="stylesheet" type="text/css" href="./css/navbar.css" />
     <link
