add hr in the sidebar

--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
     <meta name="author" content="CarlosJorgeR" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:locale" content="en_US" />
-    <meta
-      property="og:url"
-      content="https://carlosjorger.github.io/my-repositories/"
-    />
+    <meta property="og:url" content="https://carlosjorger.github.io" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Carlos Jorge's personal portfolio" />
     <meta
@@ -97,6 +94,7 @@
                 height="150"
               />
             </div>
+            <hr />
             <ul id="nav-columnar-menu-list">
               <li class="nav-element">
                 <i class="fa fa-house fa-xl"></i>
