--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Carlos Jorge's personal portfolio. I show my most important github projects.The main goals of these projects is having fun and learn new technologies and good practices"
+      content="Carlos Jorge's personal portfolio. I show my most important github projects. The main goals of these projects is having fun and learn new technologies, good practices and try to make real creative ideas"
     />
     <meta
       name="keywords"
@@ -15,26 +15,32 @@
     <meta property="og:locale" content="en_US" />
     <meta property="og:url" content="https://carlosjorger.github.io" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Carlos Jorge's personal portfolio" />
+    <meta
+      property="og:title"
+      content="Carlos Jorge's personal portfolio website"
+    />
     <meta
       property="og:description"
-      content="Carlos Jorge's personal portfolio. I show my most important github projects.The main goals of these projects is having fun and learn new technologies and good practices"
+      content="Carlos Jorge's personal portfolio website. I show my most important github projects. The main goals of these projects is having fun and learn new technologies, good practices and try to make real creative ideas"
     />
-    <meta property="og:site_name" content="Carlos Jorge's personal portfolio" />
+    <meta
+      property="og:site_name"
+      content="Carlos Jorge's personal portfolio website"
+    />
     <meta
       property="og:image"
       content="https://carlosjorger.github.io/my-repositories/images/logo.png"
     />
     <meta
       property="twitter:description"
-      content="Carlos Jorge's personal portfolio. I show my most important github projects.The main goals of these projects is having fun and learn new technologies and good practices"
+      content="Carlos Jorge's personal portfolio website. I show my most important github projects. The main goals of these projects is having fun and learn new technologies, good practices and try to make real creative ideas"
     />
     <meta
       property="twitter:title"
-      content="Carlos Jorge's personal portfolio"
+      content="Carlos Jorge's personal portfolio website"
     />
     <link rel="icon" type="image/x-icon" href="images/github.ico" />
-    <title>Carlos Jorge's personal portfolio</title>
+    <title>Carlos Jorge's personal portfolio website</title>
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
     <link rel="stylesheet" type="text/css" href="./css/navbar.css" />
     <link
