--- a/index.html
+++ b/index.html
@@ -168,44 +168,45 @@
         </article>
       </section>
       <section>
-        <article id="work">
-          <h2 class="subtitle reveal">Some projects I've make</h2>
-          <div class="card-projects">
-            <div id="open-ecommerce" class="card-project reveal">
-              <div class="card-title">OpenEcommerce</div>
-              <div class="card-description">
-                <p>
-                  OpenEcommerce is an ecommerce builded with .net. Using a
-                  hexagonal architecture, cqrs pattern and more interesting
-                  patterns.
-                </p>
-              </div>
-              <div class="card-links">
-                <a
-                  class="icon-link"
-                  href="https://github.com/CarlosJorgeR/openEcommerce"
-                  ><i class="fab fa-github fa-gl"></i
-                ></a>
-              </div>
+        <h2 class="subtitle reveal">
+          Some projects<br />
+          I've make
+        </h2>
+        <div class="card-projects">
+          <div id="open-ecommerce" class="card-project reveal">
+            <div class="card-title">OpenEcommerce</div>
+            <div class="card-description">
+              <p>
+                OpenEcommerce is an ecommerce builded with .net. Using a
+                hexagonal architecture, cqrs pattern and more interesting
+                patterns.
+              </p>
             </div>
-            <div id="angular-portfolio" class="card-project reveal">
-              <div class="card-title">Angular Portfolio</div>
-              <div class="card-description">
-                <p>
-                  It is a personal portfolio builded with angular using really
-                  cool animation (Angular animations).
-                </p>
-              </div>
-              <div class="card-links">
-                <a
-                  class="icon-link"
-                  href="https://github.com/CarlosJorgeR/portfolio"
-                  ><i class="fab fa-github fa-gl"></i
-                ></a>
-              </div>
+            <div class="card-links">
+              <a
+                class="icon-link"
+                href="https://github.com/CarlosJorgeR/openEcommerce"
+                ><i class="fab fa-github fa-gl"></i
+              ></a>
             </div>
           </div>
-        </article>
+          <div id="angular-portfolio" class="card-project reveal">
+            <div class="card-title">Angular Portfolio</div>
+            <div class="card-description">
+              <p>
+                It is a personal portfolio builded with angular using really
+                cool animation (Angular animations).
+              </p>
+            </div>
+            <div class="card-links">
+              <a
+                class="icon-link"
+                href="https://github.com/CarlosJorgeR/portfolio"
+                ><i class="fab fa-github fa-gl"></i
+              ></a>
+            </div>
+          </div>
+        </div>
       </section>
       <footer>
         <div class="footer">
