--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
           </p>
         </div>
       </section>
-      <section>
-        <article id="aboutMe" class="centered-article">
+      <section id="aboutMe">
+        <div class="centered-article">
           <h2 class="subtitle reveal">About me</h2>
           <p class="reveal">
             Hello, My name is Carlos Jorge. I'm a full-stack engineer that enjoy
@@ -165,14 +165,14 @@
             In my free time I like listening to music, reading books or watching
             movies from favorite directors.
           </p>
-        </article>
+        </div>
       </section>
-      <section>
-        <h2 class="subtitle reveal">
-          Some projects<br />
-          I've make
-        </h2>
+      <section id="work">
         <div class="card-projects">
+          <h2 class="subtitle reveal">
+            Some projects<br />
+            I've make
+          </h2>
           <div id="open-ecommerce" class="card-project reveal">
             <div class="card-title">OpenEcommerce</div>
             <div class="card-description">
