change github username

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       name="keywords"
       content="HTML,CSS,JavaScript,Github,Repository,Portfolio"
     />
-    <meta name="author" content="CarlosJorgeR" />
+    <meta name="author" content="carlosjorger" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:url" content="https://carlosjorger.github.io" />
@@ -29,7 +29,7 @@
     />
     <meta
       property="og:image"
-      content="https://carlosjorger.github.io/my-repositories/images/logo.png"
+      content="https://carlosjorger.github.io/images/logo.png"
     />
     <meta
       property="twitter:description"
@@ -185,7 +185,7 @@
             <div class="card-links">
               <a
                 class="icon-link"
-                href="https://github.com/CarlosJorgeR/openEcommerce"
+                href="https://github.com/carlosjorger/openEcommerce"
                 ><i class="fab fa-github fa-gl"></i
               ></a>
             </div>
@@ -201,7 +201,7 @@
             <div class="card-links">
               <a
                 class="icon-link"
-                href="https://github.com/CarlosJorgeR/portfolio"
+                href="https://github.com/carlosjorger/portfolio"
                 ><i class="fab fa-github fa-gl"></i
               ></a>
             </div>
@@ -216,7 +216,7 @@
               <a class="icon-link" href="mailto:rodriguezcuelloc@gmail.com"
                 ><i class="fab fa-google fa-3x"></i
               ></a>
-              <a class="icon-link" href="https://github.com/CarlosJorgeR"
+              <a class="icon-link" href="https://github.com/carlosjorger"
                 ><i class="fab fa-github fa-3x"></i
               ></a>
               <a class="icon-link" href="https://www.linkedin.com/in/cjrcuello/"
@@ -233,7 +233,7 @@
               <br />
               <a
                 class="work-link"
-                href="https://github.com/CarlosJorgeR/carlosjorger.github.io"
+                href="https://github.com/carlosjorger/carlosjorger.github.io"
                 >Published</a
               >
               in
