--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
               <a class="icon-link" href="https://www.linkedin.com/in/cjrcuello/"
                 ><i class="fab fa-linkedin fa-3x"></i
               ></a>
-              <a class="icon-link" href="https://twitter.com/CarlosJorgeRod3"
+              <a class="icon-link" href="https://twitter.com/carlosjorgerc"
                 ><i class="fab fa-twitter fa-3x"></i
               ></a>
             </div>
