--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta
       name="keywords"
-      content="HTML,CSS,JavaScript,Github,Repository,Portfolio"
+      content="HTML,CSS,JavaScript,Github,Repository,Portfolio,Website"
     />
     <meta name="author" content="carlosjorger" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
